/*
 * $Id: ChangeLog,v 1.5514 2007/05/11 23:48:15 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-05-12 15:30 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/compiler/hbfix.c
    ! Corrected some local near optimizations which were not excluding detached locals, and were not using HB_LIM_INT8()
    /* All prg sources must be recompiled to correct compilation of detached locals operations in codeblocks */

  * source/pp/ppcore.c
    ! Fixed wild match marker support of literal ';'

2007-05-11 19:45 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/pp/ppcore.c
    * Added Extended Codeblock support to Blockify

2007-05-11 18:50 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/pp/ppcore.c
    * Minor correction to Extended Codeblock support

2007-05-11 18:15 UTC+0100 Hannes Ziegler <hz@knowleXbase.com>
    + added HTML classes and functions
      see source\tip\changelog

    + tests\tiptest\loadhtml.prg
    + tests\tiptest\dbtohtml.prg

2007-05-11 11:35 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/classex.ch
    ! Fixed to work with new PP

2007-05-11 10:00 UTC-0300 Ranier Vilela <ranier/at/cultura.com.br>
  * source/vm/eval.c
    * Minor optimizations
    * Fix my mistake at line 187, uiParam count LEN to 0 (Thanks Toninho!)

2007-05-11 13:00 UTC+0100 Miguel Angel Marchuet (miguelangel/at/marchuet.net)
  * include/adordd.ch
  * include/usrrdd.ch
  * source/rdd/usrrdd/rdds/adordd.prg
    + Added FireBird support
    + ADO_CLOSE( nWA )
    + ADO_ZAP( nWA )
    * ADO_ORDINFO( nWA, nIndex, aOrderInfo )
    + ADO_RECINFO( nWA, nRecord, nInfoType, uInfo )
    + Added support to new FieldTypes DateTime, TimeStamp, Ole.

  * include/hbdbf.h
    + some comments.

  * include/hbtypes.h
    * corrected definition function. VM_PROCESS_DLL_SYMBOLS