@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5514 2007/05/11 23:48:15 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5515 2007/05/12 19:30:55 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-05-13 21:25 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
+  * source/vm/hvm.c
+  * source/vm/memvars.c
+    * Reset of type when copying a memo field to memvar and array
 
 2007-05-12 15:30 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
   * source/compiler/hbfix.c
